[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = picreduce
description = Astropy derivative package
long_description = This is a package for reducing lab and flight data from the PICTURE VNC sounding rocket experiment
author = douglase
author_email = douglase@bu.edu
license = BSD
url = TBD
edit_on_github = False


[entry_points]
astropy-package-template-example = picreduce.example_mod:main